# rust-refactoring-guru

./: Cargo.toml  README.md
behavioral/chain-of-responsibility/: Cargo.toml  README.md
behavioral/chain-of-responsibility/src/department/: doctor.rs  medical.rs  reception.rs
behavioral/command/: Cargo.toml  README.md
behavioral/command/src/: main.rs
behavioral/command/src/command/: copy.rs  cut.rs  paste.rs
behavioral/iterator/: README.md
behavioral/mediator/: README.md
behavioral/memento/: Cargo.toml  README.md
behavioral/memento/src/: main.rs
behavioral/observer/: README.md
behavioral/observer/src/: observer.rs
behavioral/state/: Cargo.toml  README.md
behavioral/state/src/: main.rs
behavioral/strategy/: README.md
behavioral/strategy/src/: main.rs
behavioral/template-method/: Cargo.toml  README.md
behavioral/visitor/: README.md
creational/abstract-factory/: Cargo.toml  README.md
creational/abstract-factory/src/: gui.rs  main.rs  render.rs
creational/abstract-factory/src/macos_gui/: button.rs  checkbox.rs  factory.rs
creational/abstract-factory/src/windows_gui/: button.rs  checkbox.rs  factory.rs
creational/builder/: README.md
creational/factory-method/: Cargo.toml  README.md
creational/prototype/: README.md
creational/singleton/: Cargo.toml  README.md
creational/singleton/src/: main.rs
structural/adapter/: README.md
structural/bridge/: README.md
structural/bridge/src/: device.rs  remotes.rs
structural/composite/: Cargo.toml  README.md
structural/decorator/: README.md
structural/facade/: README.md
structural/flyweight/: README.md
structural/flyweight/src/: main.rs  parking.rs
structural/flyweight/src/parking/car/: car_type.rs
structural/proxy/: README.md
structural/proxy/src/server/: nginx.rs
