[workspace]

members = [
    "behavioral/command",
    "behavioral/iterator",
    "behavioral/state",
    "behavioral/strategy",
    "behavioral/visitor",
    "creational/abstract-factory",
    "creational/builder",
    "creational/factory-method",
    "creational/prototype",
    "creational/singleton",
    "structural/adapter",
    "structural/bridge",
    "structural/facade",
    "structural/proxy",
]

resolver = "3"
