[workspace]

members = [
    "behavioral/chain-of-responsibility",
    "behavioral/command",
    "behavioral/iterator",
    "behavioral/mediator",
    "behavioral/state",
    "behavioral/strategy",
    "behavioral/visitor",
    "creational/abstract-factory",
    "creational/builder",
    "creational/factory-method",
    "creational/prototype",
    "creational/singleton",
    "structural/adapter",
    "structural/bridge",
    "structural/composite",
    "structural/decorator",
    "structural/facade",
    "structural/flyweight",
    "structural/proxy",
]

resolver = "3"
